# msg_q

./: Cargo.toml  add.sh  browse.sh  flake.nix  get.sh
src/lib/: config.rs
src/lib/domain/messages/: ports.rs  service.rs
src/lib/domain/messages/models/: message.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: errors.rs  handlers.rs  responses.rs
src/lib/inbound/http/handlers/: create_message.rs  get_message.rs  queue_list.rs  queue_summary.rs
src/lib/outbound/: memory.rs
