[package]
name = "msg_q"
version = "0.1.0"
edition = "2021"

[lib]
name = "msg_q"
path = "src/lib/lib.rs"

[[bin]]
name = "msg_q_server"
path = "src/bin/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1.0.120"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
derive_more = "0.99.18"
serde = { version = "1.0.204", features = ["std", "derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
